se agrgan estilos

--- a/app/views/movies/_movie.html.erb
+++ b/app/views/movies/_movie.html.erb
@@ -1,9 +1,8 @@
-
-  <div class="col-4 py-2">
+ <div class="col-4 py-2">
     <div class="card">
       <div class="card-body">
         <h5 class="card-title"><%= movie.name %></h5>
-        <%= link_to "Mostrar Pelicula", movie, class: "btn btn-primary" %>
+        <%= link_to "Mostrar Pelicula", movie, class: "btn btn-outline-info" %>
       </div>
     </div>
   </div>
