--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
 <div class="container">
+
   <h1>Peliculas</h1>
-  <%= link_to "New movie", new_movie_path %>
+  <%= link_to "New movie", new_movie_path, class: "btn btn-primary" %>
+  
   <div id="movies">
-    <div class="row">
+    <div class="row mt-3">
       <% @movies.each do |movie| %>
         <%= render movie %>
       <% end %>
