--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -1,5 +1,9 @@
-<p style="color: green"><%= notice %></p>
-
+<% if notice %>
+  <div class="alert alert-success alert-dismissible fade show" role="alert">
+    <%= notice %>
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+<% end %>
 <div class="container">
   <h1>Clientes</h1>
 
