--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -3,7 +3,7 @@
 <div class="container">
 
   <h1>Peliculas</h1>
-  <%= link_to "New movie", new_movie_path, class: "btn btn-primary" %>
+  <%= link_to "Nueva Pelicula", new_movie_path, class: "btn btn-primary" %>
   
   <div id="movies">
     <div class="row mt-3">
