--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -2,9 +2,8 @@
 
 <%= render @movie %>
 
-<div>
-  <%= link_to "Edit this movie", edit_movie_path(@movie) %> |
-  <%= link_to "Back to movies", movies_path %>
-
-  <%= button_to "Destroy this movie", @movie, method: :delete %>
+<div class="container mt-3">
+  <%= link_to "Editar", edit_movie_path(@movie), class: "btn btn-warning me-2" %>
+  <%= link_to "Volver a películas", movies_path, class: "btn btn-secondary me-2" %>
+  <%= button_to "Eliminar", @movie, method: :delete, class: "btn btn-danger mt-2" %>
 </div>
