--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg" style="background-color: rgb(249, 235, 255);">
   <div class="container-fluid">
   <a class="navbar-brand" href="<%= root_path %>">
   <img src="<%= asset_path('block.jpg') %>" alt="Logo" style="height: 35px; width: auto;"></a>
